--- a/main.html
+++ b/main.html
@@ -1,13 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-     
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Swift</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <section class="swift_main">
+      <header class="main_heading">
+        <div class="swift_logo">
+          <img src="img/Swift.png" alt="simage" />
+        </div>
+        <div class="main_heading_part">
+          <div class="download_app">DOWNLOAD APP</div>
+          <div class="become_our_partner">
+            <button>Become Our Partner</button>
+          </div>
+        </div>
+      </header>
+      <section class="hand_mobile">
+        <div class="hand_mobile_contents">
+          <h1 class="hand_image_heading">
+            Get Your Popcorn And <br />Beverage's To Your Seat
+          </h1>
+          <p>
+            lorem ipsum is simple dummy text of the printing and
+            <br />typesetting industry.lorem ipsum has been<br />
+            the industry's standard dummy text even since 1500's,
+          </p>
+          <div>
+            <img class="gplay_image" src="img/google_play.png" alt="gimage" />
+            <img class="app_image" src="img/app store.png" alt="appimage" />
+          </div>
+        </div>
+        <div class="main_hand_image">
+          <img class="hand_image" src="img/Untitled-1.png" alt="himage" />
+        </div>
+      </section>
 
-</body>
+      <section class="aboutus">
+        <div>
+          <h3 class="aboutus_heading">About us</h3>
+          <h1>Lorem Ipsum Is Simply Dummy Text</h1>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and <br>typesetting
+            industry. Lorem Ipsum has been the <br>industry's standard dummy text
+            ever since the 1500s,
+          </p>
+          <div><img src="img/play_store.png" alt="play_store"></div>
+          <!-- <div class="about_bg" >
+            <img src="img/Untitled-1.png" alt="1">
+          </div> -->
+          </div>
+      </section>
+
+      <section>
+        
+      </section>
+
+
+    </section>
+  </body>
 </html>
