--- a/main.html
+++ b/main.html
@@ -41,26 +41,27 @@
       </section>
 
       <section class="aboutus">
-        <div>
-          <h3 class="aboutus_heading">About us</h3>
-          <h1>Lorem Ipsum Is Simply Dummy Text</h1>
-          <p>
-            Lorem Ipsum is simply dummy text of the printing and <br>typesetting
-            industry. Lorem Ipsum has been the <br>industry's standard dummy text
-            ever since the 1500s,
-          </p>
-          <div><img src="img/play_store.png" alt="play_store"></div>
-          <!-- <div class="about_bg" >
-            <img src="img/Untitled-1.png" alt="1">
-          </div> -->
-          </div>
+        <div class="about_content1">
+            <h4 class="about_heading1">About us</h4>
+            <h1 class="about_heading2">Lorem Ipsum Is Simply Dummy Text</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and<br> 
+                typesetting industry. Lorem Ipsum has been the<br> 
+                industry's standard dummy text ever since the 1500s,</p>
+                <img src="img/play_store.png" alt="pimg">
+        </div>
+        <div about_content2>
+            <img src="images/mobile1.png" alt="mimage">
+        </div>
       </section>
 
       <section>
-        
+        <div class="partner_main">
+            <h1 class="about_heading1">Do You Wish To Become A Partner</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and<br> 
+                typesetting industry.</p>
+                <button class="partner_btn">Partner With us</button>
+        </div>
       </section>
-
-
     </section>
   </body>
 </html>
