landing done partially

--- a/main.html
+++ b/main.html
@@ -56,9 +56,14 @@
           </div>
       </section>
 
-      <section>
-        
-      </section>
+      <!-- <section class="become_partner">
+        <div class="become_our_partner">
+          <h2 style="color: #d91f4d;">Do you wish to be a partner?</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.</p>
+          <button class="partner_button">PARTNER WITH US</button>
+        </div>
+      </section> -->
 
 
     </section>
