form page updated

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
         <div class="main_heading_part">
           <div class="download_app">DOWNLOAD APP</div>
           <div class="become_our_partner">
-            <button>Become Our Partner</button>
+            <a href="form.html" target="_blank" ><button type="submit" >Become Our Partner</button></a>
           </div>
         </div>
       </header>
@@ -59,7 +59,7 @@
             <h1 class="about_heading1">Do You Wish To Become A Partner</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and<br> 
                 typesetting industry.</p>
-                <button class="partner_btn">Partner With us</button>
+                <a href="form.html" target="_blank" ><button class="partner_btn" type="submit" >Partner With Us</button></a>
         </div>
       </section>
     </section>
